--- a/cars.ipynb
+++ b/cars.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXNIIehIudRuWF6lChpHcO",
+      "authorship_tag": "ABX9TyNlxMVSYYsEGPgtrk2jXkJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,7 +248,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Importing**  **libraries**\n"
+        "# **Importing**  **libraries**\n"
       ],
       "metadata": {
         "id": "0yV7B89pq1Hk"
@@ -271,7 +271,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Loading dataset"
+        "# Loading dataset"
       ],
       "metadata": {
         "id": "kEFURwqjreUy"
@@ -1041,7 +1041,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Data** **cleaning**"
+        "# **Data** **cleaning**"
       ],
       "metadata": {
         "id": "4IiHpuPdsjHv"
@@ -1155,7 +1155,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Univariate Analysis**"
+        "# **Univariate Analysis**"
       ],
       "metadata": {
         "id": "LQNYGGmTtMaf"
@@ -1387,7 +1387,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Bivariate Analysis:**"
+        "# **Bivariate Analysis:**"
       ],
       "metadata": {
         "id": "bQ_XaIi4zrdd"
@@ -1429,7 +1429,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Visualization:**"
+        "# **Visualization:**"
       ],
       "metadata": {
         "id": "LQlY7Wlb04-R"
